26 Nov 2004 mipsator
 * made cpuid_test using compat.


25 Nov 2004 mipsator
 * added missing code that translate arch name into id.
 * improved architecture detection code.

24 Nov 2004 mipsator
 * x86 cpu detection engine is complete, need more data now.

21 Nov 2004 mipsator
 * improved tests/Makefile to preprocess assembly files by default.
 * added detection of cc,cpp and as in pmkcfg.sh.
 * added generation of tests/Makefile from a template.
 * improved Makefile to preprocess assembly files by default.

17 Nov 2004 mipsator
 * modified x86 cpu detection stuff to use less assembly.

05 Nov 2004 mipsator
 * improved cpu arch detection in pmksetup.
 * added some x86 cpu detection stuff used by tests/cpuid_test.

01 Nov 2004 mipsator
 * misc changes before cpu detection.

27 Oct 2004 mipsator
 * added 'as' (assembler) detection in pmksetup.

25 Oct 2004 mipsator
 * fixed pmkcfg.sh on IRIX.

18 Oct 2004 mipsator
 * improved pmkcfg.sh to try to detect posix shells before using /bin/sh
   (this fix the Tru64 and SunOS lack of default posix shell problem).

11 Oct 2004 mipsator
 * imported experimental cpu family detection.

# snapshot 0.8.1-s8

26 Sep 2004 mipsator
 * updated pmkfile.5 to sync with latest changes.
 * updated README and INSTALL to warn about non POSIX compliant shells.

26 Sep 2004 mipsator
 * improved CHECK_LIB to handle more than one function. 

24 Sep 2004 mipsator
 * CHECK_HEADER is now able to check more than one function (feature
   asked by Gergely Czuczy).
 * fixed initialisation of some variables in pmk.c (noticed on irix).
 * updated samples/bin_c to use config.h and one check for strl*()
   functions.

23 Sep 2004 mipsator
 * returned on getopts use in pmkcfg.sh to handle blanks in arguments.

# snapshot 0.8.1-s7

10 Sep 2004 xsa
 * imported some IRIX stuff in pmkcomp.dat.

06 Sep 2004 mipsator
 * improved pmkcfg.sh function to return test status (0 or 1).

05 Sep 2004 mipsator