@@ -8,7 +8,9 @@
 #include <stdlib.h>
 #include <unistd.h>
 
-#include "../hash.c"
+#include "../compat/compat.h"
+#include "../compat/pmk_string.h"
+#include "../hash.h"
 
 #define TAB_SIZE 256
 #define NBKEYS 256
